# sphinxcontrib-websupport

./: .flake8  .gitignore  .ruff.toml  .travis.yml  CHANGES  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  babel.cfg  checklist.rst  pyproject.toml  setup.cfg  setup.py  test-reqs.txt  tox.ini
.github/workflows/: create-release.yml  test.yml
sphinx/builders/: websupport.py
sphinx/websupport/: __init__.py
sphinx/websupport/search/: __init__.py
sphinx/websupport/storage/: differ.py  sqlalchemy_db.py  sqlalchemystorage.py
sphinxcontrib/websupport/: __init__.py  builder.py  core.py  errors.py  utils.py  version.py  writer.py
sphinxcontrib/websupport/search/: __init__.py  nullsearch.py  whooshsearch.py  xapiansearch.py
sphinxcontrib/websupport/storage/: __init__.py  differ.py  sqlalchemy_db.py  sqlalchemystorage.py
tests/: conftest.py  path.py  test_searchadapters.py  test_websupport.py  util.py
tests/root/: contents.txt
tests/roots/test-root/root/: autodoc_fodder.py  autodoc_missing_imports.py  conf.py  ext.py  parsermod.py
tests/roots/test-root/root/special/: code.py
tests/roots/test-searchadapters/: conf.py
