[build-system]
requires = ["flit_core>=3.7"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "sphinxcontrib-websupport"
description = """sphinxcontrib-websupport provides a Python API to easily \
integrate Sphinx documentation into your Web application"""
readme = "README.rst"
urls.Changelog = "https://github.com/sphinx-doc/sphinxcontrib-websupport/blob/master/CHANGES.rst"
urls.Code = "https://github.com/sphinx-doc/sphinxcontrib-websupport/"
urls.Download = "https://pypi.org/project/sphinxcontrib-websupport/"
urls.Homepage = "https://www.sphinx-doc.org/"
urls."Issue tracker" = "https://github.com/sphinx-doc/sphinx/issues/"
license.text = "BSD-2-Clause"
requires-python = ">=3.9"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "jinja2",
    "Sphinx>=5",
    "sphinxcontrib-serializinghtml",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
whoosh = [
    "sqlalchemy",
    "whoosh",
]
lint = [
    "ruff==0.5.5",
    "mypy",
    "types-docutils",
]

[[project.authors]]
name = "Georg Brandl"
email = "georg@python.org"

[project.entry-points]
"sphinx.builders".websupport = "sphinxcontrib.websupport.builder:WebSupportBuilder"


[tool.flit.module]
name = "sphinxcontrib.websupport"

[tool.flit.sdist]
include = [
    "CHANGES.rst",
    "LICENCE.rst",
    # Tests
    "tests/",
    "tox.ini",
]

[tool.mypy]
python_version = "3.9"
packages = [
    "sphinxcontrib",
    "tests",
]
exclude = [
    "tests/roots",
]
check_untyped_defs = true
#disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
disallow_untyped_decorators = true
#disallow_untyped_defs = true
explicit_package_bases = true
extra_checks = true
no_implicit_reexport = true
show_column_numbers = true
show_error_context = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "type-arg",
    "redundant-self",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
]

[[tool.mypy.overrides]]
module = [
    "sqlalchemy",
    "sqlalchemy.orm",
    "sqlalchemy.sql",
    "whoosh",
    "whoosh.analysis",
    "whoosh.fields",
    "whoosh.qparser",
    "xapian",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "support",
]
