[egg_info]
tag_build = .dev
tag_date = true

[aliases]
release = egg_info -Db ''
upload = upload --sign --identity=36580288

[extract_messages]
mapping_file = babel.cfg
output_file = sphinx/locale/sphinx.pot
keywords = _ l_ lazy_gettext

[wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 95
ignore = E116,E241,E251
exclude = .git,.tox,tests/*
