[egg_info]
tag_build = .dev
tag_date = true

[aliases]
release = egg_info -Db ''

[extract_messages]
mapping_file = babel.cfg
output_file = sphinx/locale/sphinx.pot
keywords = _ l_ lazy_gettext

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 95
ignore = E116,E241,E251
exclude = .git,.tox,.venv,tests/*
